--- a/message.html
+++ b/message.html
@@ -35,9 +35,10 @@ background:none;
 font-size:24px;
 font-weight:900;
 cursor:pointer;
+color:#111;
 }
 
-/* CHAT LIST */
+/* LIST */
 
 .chatList{
 padding:12px;
@@ -46,32 +47,14 @@ padding:12px;
 .chatItem{
 display:flex;
 align-items:center;
-justify-content:space-between;
 gap:12px;
 background:white;
 padding:14px;
 border-radius:14px;
 margin-bottom:10px;
+cursor:pointer;
 box-shadow:0 2px 8px rgba(0,0,0,.05);
 }
-
-.chatLeftItem{
-display:flex;
-align-items:center;
-gap:12px;
-cursor:pointer;
-flex:1;
-}
-
-.deleteBtn{
-border:none;
-background:none;
-font-size:18px;
-color:#ef4444;
-cursor:pointer;
-}
-
-/* AVATAR */
 
 .avatar{
 width:50px;
@@ -90,12 +73,10 @@ bottom:2px;
 right:2px;
 width:12px;
 height:12px;
+background:#22c55e;
 border-radius:50%;
 border:2px solid white;
 }
-
-.online.on{background:#22c55e;}
-.online.off{background:#9ca3af;}
 
 .name{
 font-weight:900;
@@ -104,11 +85,6 @@ font-size:15px;
 
 .rank{
 font-size:12px;
-color:#6b7280;
-}
-
-.status{
-font-size:11px;
 color:#6b7280;
 }
 
@@ -134,6 +110,7 @@ justify-content:space-between;
 align-items:center;
 padding:14px;
 border-bottom:1px solid #e5e7eb;
+background:white;
 }
 
 .chatLeft{
@@ -153,7 +130,9 @@ object-fit:cover;
 border:none;
 background:none;
 font-size:24px;
+font-weight:900;
 cursor:pointer;
+color:#111;
 }
 
 /* MESSAGES */
@@ -199,8 +178,6 @@ margin-top:6px;
 padding:10px;
 border-top:1px solid #e5e7eb;
 background:white;
-position:sticky;
-bottom:0;
 }
 
 .preview{
@@ -217,17 +194,19 @@ align-items:center;
 
 .row input{
 flex:1;
-padding:12px 14px;
+padding:11px 14px;
 border-radius:20px;
 border:1px solid #ddd;
-font-size:16px;
+font-size:16px; /* prevents iphone zoom */
 }
 
 .row button{
 border:none;
 background:none;
-font-size:24px;
+font-size:26px;
+font-weight:900;
 cursor:pointer;
+color:#111;
 }
 
 </style>
@@ -253,8 +232,8 @@ Messages
 <img id="chatAvatar">
 
 <div>
-<div id="chatName"></div>
-<div id="chatRank" class="rank"></div>
+<div id="chatName" style="font-weight:900"></div>
+<div id="chatRank" style="font-size:12px;color:#6b7280"></div>
 </div>
 
 </div>
@@ -271,7 +250,7 @@ Messages
 
 <div class="row">
 
-<button onclick="fileInput.click()">＋</button>
+<button id="plusBtn">＋</button>
 
 <input id="messageInput" placeholder="Type message">
 
@@ -289,7 +268,7 @@ Messages
 
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 import { getAuth,onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-import { getFirestore,collection,addDoc,onSnapshot,query,orderBy,getDocs,updateDoc,doc,deleteDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+import { getFirestore,collection,addDoc,onSnapshot,query,orderBy,getDocs,updateDoc,doc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 const firebaseConfig={
 apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
@@ -303,20 +282,46 @@ const db=getFirestore(app);
 
 const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
 
+/* ✅ FIX: always define elements in module scripts (prevents white screen) */
+const chatList = document.getElementById("chatList");
+const chatBox = document.getElementById("chatBox");
+const messages = document.getElementById("messages");
+
+const chatAvatar = document.getElementById("chatAvatar");
+const chatName = document.getElementById("chatName");
+const chatRank = document.getElementById("chatRank");
+
+const preview = document.getElementById("preview");
+const messageInput = document.getElementById("messageInput");
+const fileInput = document.getElementById("fileInput");
+const sendBtn = document.getElementById("sendBtn");
+const plusBtn = document.getElementById("plusBtn");
+
 let currentEmail;
 let chatUser;
 let chatId;
 
-const chatList=document.getElementById("chatList");
-const messages=document.getElementById("messages");
+plusBtn.onclick = () => fileInput.click();
 
 onAuthStateChanged(auth,(user)=>{
-if(!user){location.href="index.html";return;}
-currentEmail=user.email.toLowerCase();
-loadChats();
-});
 
-/* GET USER */
+if(!user){
+location.href="index.html";
+return;
+}
+
+currentEmail=user.email.toLowerCase();
+
+loadChats();
+
+/* ✅ FIX: open chat when coming from friends.html */
+const params = new URLSearchParams(window.location.search);
+const openUser = params.get("user");
+if(openUser){
+openChat(openUser.toLowerCase());
+}
+
+});
 
 async function getUser(email){
 
@@ -327,15 +332,19 @@ let photo="https://i.ibb.co/2kRZ7Z6/avatar.png";
 const snap=await getDocs(collection(db,"users"));
 
 snap.forEach(d=>{
+
 const u=d.data();
-if(u.email===email){
+
+if((u.email||"").toLowerCase()===email){
 name=u.name||name;
 rank=u.rank||"";
 photo=u.photo||photo;
 }
+
 });
 
 return{name,rank,photo};
+
 }
 
 function chatKey(a,b){
@@ -353,18 +362,18 @@ onSnapshot(q,async(snap)=>{
 const map={};
 
 snap.forEach(d=>{
+
 const m=d.data();
+
 if(m.from!==currentEmail && m.to!==currentEmail)return;
+
 const other=m.from===currentEmail?m.to:m.from;
+
 map[other]=m;
+
 });
 
 chatList.innerHTML="";
-
-if(Object.keys(map).length===0){
-chatList.innerHTML="<div style='text-align:center;margin-top:40px;color:#6b7280;'>No conversations yet</div>";
-return;
-}
 
 for(const email in map){
 
@@ -372,24 +381,17 @@ const p=await getUser(email);
 
 chatList.innerHTML+=`
 
-<div class="chatItem">
-
-<div class="chatLeftItem" onclick="openChat('${email}')">
+<div class="chatItem" data-email="${email}">
 
 <div class="avatarWrap">
 <img class="avatar" src="${p.photo}">
-<div class="online on"></div>
+<div class="online"></div>
 </div>
 
 <div>
 <div class="name">${p.name}</div>
 <div class="rank">${p.rank}</div>
-<div class="status">${map[email].seen?"Read":"Unread"}</div>
 </div>
-
-</div>
-
-<button class="deleteBtn" onclick="deleteChat('${email}')">✕</button>
 
 </div>
 
@@ -397,29 +399,18 @@ chatList.innerHTML+=`
 
 }
 
+/* ✅ click handler without inline onclick (more reliable) */
+document.querySelectorAll(".chatItem").forEach(item=>{
+item.onclick = () => openChat(item.getAttribute("data-email"));
+});
+
 });
 
 }
-
-/* DELETE CHAT */
-
-window.deleteChat=async function(email){
-
-const key=chatKey(currentEmail,email);
-
-const snap=await getDocs(collection(db,"messages"));
-
-snap.forEach(async d=>{
-if(d.data().chatId===key){
-await deleteDoc(doc(db,"messages",d.id));
-}
-});
-
-};
 
 /* OPEN CHAT */
 
-window.openChat=async function(email){
+window.openChat = async function(email){
 
 chatUser=email;
 chatId=chatKey(currentEmail,email);
@@ -442,7 +433,7 @@ window.closeChat=function(){
 chatBox.style.display="none";
 };
 
-/* CALL */
+/* CALL BUTTON */
 
 window.startCall=function(){
 alert("Call feature coming soon");
@@ -476,8 +467,6 @@ ${m.text||""}
 
 ${m.photo?`<img src="${m.photo}" class="chatPhoto">`:""}
 
-${me?`<div style="font-size:11px;color:#6b7280;margin-top:4px;">${m.seen?'✓✓ Seen':'✓ Sent'}</div>`:''}
-
 </div>
 
 </div>
@@ -497,6 +486,7 @@ messages.scrollTop=messages.scrollHeight;
 fileInput.onchange=function(){
 
 const f=this.files[0];
+
 if(!f)return;
 
 preview.src=URL.createObjectURL(f);
@@ -513,6 +503,12 @@ const file=fileInput.files[0];
 
 if(!text && !file)return;
 
+/* block sending if no chat selected */
+if(!chatId || !chatUser){
+alert("Open a chat first.");
+return;
+}
+
 let photo="";
 
 if(file)photo=URL.createObjectURL(file);
@@ -524,7 +520,6 @@ from:currentEmail,
 to:chatUser,
 text:text,
 photo:photo,
-seen:false,
 createdAt:Date.now()
 
 });
@@ -533,7 +528,7 @@ messageInput.value="";
 preview.style.display="none";
 fileInput.value="";
 
-/* upload background */
+/* background upload */
 
 if(file){
 
