--- a/message.html
+++ b/message.html
@@ -283,7 +283,7 @@ Messages
 
 <input id="messageInput" placeholder="Type message">
 
-<button id="sendBtn">↑</button>
+<button id="sendBtn">➤</button>
 
 <input type="file" id="fileInput" accept="image/*" style="display:none">
 
