--- a/message.html
+++ b/message.html
@@ -283,7 +283,11 @@ Messages
 
 <input id="messageInput" placeholder="Type message">
 
-<button id="sendBtn">➤</button>
+<button id="sendBtn">
+<svg viewBox="0 0 24 24">
+<path d="M3 11l18-8-8 18-2-7-8-3z"/>
+</svg>
+</button>
 
 <input type="file" id="fileInput" accept="image/*" style="display:none">
 
