--- a/message.html
+++ b/message.html
@@ -283,11 +283,7 @@ Messages
 
 <input id="messageInput" placeholder="Type message">
 
-<button id="sendBtn">
-<svg viewBox="0 0 24 24">
-<path d="M3 11l18-8-8 18-2-7-8-3z"/>
-</svg>
-</button>
+<button id="sendBtn">✉️</button>
 
 <input type="file" id="fileInput" accept="image/*" style="display:none">
 
