--- a/message.html
+++ b/message.html
@@ -279,11 +279,11 @@ Messages
 
 <div class="row">
 
-<button id="plusBtn">＋</button>
+<button id="plusBtn">➕</button>
 
 <input id="messageInput" placeholder="Type message">
 
-<button id="sendBtn">✉️</button>
+<button id="sendBtn">✅</button>
 
 <input type="file" id="fileInput" accept="image/*" style="display:none">
 
