--- a/message.html
+++ b/message.html
@@ -74,9 +74,14 @@ body{
   border-radius:50%;
   border:2px solid white;
 }
-.online.on{ background:#22c55e; }
-.online.off{ background:#9ca3af; }
 
+.online.on{
+  background:#22c55e;
+}
+
+.online.off{
+  display:none;
+}
 .name{
   font-weight:900;
   font-size:15px;
