--- a/friends.html
+++ b/friends.html
@@ -89,6 +89,70 @@ font-weight:700;
 border:none;
 cursor:pointer;
 }
+  .container{
+padding:20px;
+padding-bottom:110px;
+}
+
+.card{
+background:white;
+padding:16px;
+border-radius:14px;
+margin-bottom:12px;
+box-shadow:0 2px 8px rgba(0,0,0,.05);
+}
+
+.row{
+display:flex;
+gap:8px;
+margin-top:10px;
+}
+
+.primary{
+background:#2563eb;
+color:white;
+}
+
+.light{
+background:#e5e7eb;
+color:#111;
+}
+
+.danger{
+background:#ef4444;
+color:white;
+}
+
+.bottomnav{
+position:fixed;
+bottom:15px;
+left:50%;
+transform:translateX(-50%);
+width:90%;
+height:65px;
+background:#e5e7eb;
+border-radius:22px;
+display:flex;
+justify-content:space-around;
+align-items:center;
+box-shadow:0 2px 10px rgba(0,0,0,.08);
+}
+
+.bottomnav button{
+background:none;
+border:none;
+font-size:12px;
+font-weight:600;
+color:#374151;
+}
+
+.bottomnav button.active{
+color:#3b82f6;
+font-weight:800;
+}
+  </style>
+</head>
+<body>
 <div class="container">
 
 <h2>👥 Friends</h2>
@@ -103,7 +167,7 @@ cursor:pointer;
 </div>
 
 <div id="friendsList"></div>
-<div id="friendList" class="friendList"></div>
+
 </div>
 
 <div class="bottomnav">
