--- a/friends.html
+++ b/friends.html
@@ -89,6 +89,31 @@ font-weight:700;
 border:none;
 cursor:pointer;
 }
+  .friendRow{
+display:flex;
+justify-content:space-between;
+align-items:center;
+gap:12px;
+margin-bottom:10px;
+}
+
+.friendInfo{
+display:flex;
+align-items:center;
+gap:12px;
+}
+
+.avatarWrapper{
+width:50px;
+height:50px;
+}
+
+.avatarWrapper img{
+width:50px;
+height:50px;
+border-radius:50%;
+object-fit:cover;
+}
   .container{
 padding:20px;
 padding-bottom:110px;
