--- a/friends.html
+++ b/friends.html
@@ -115,18 +115,18 @@ position:relative;
 width:50px;
 height:50px;
 border-radius:50%;
-overflow:hidden;
 box-shadow:0 2px 6px rgba(0,0,0,.2);
 }
 .onlineDot{
 position:absolute;
-bottom:2px;
-right:2px;
-width:12px;
-height:12px;
+bottom:-2px;
+right:-2px;
+width:14px;
+height:14px;
 background:#22c55e;
 border-radius:50%;
-border:2px solid white;
+border:3px solid white;
+box-shadow:0 0 6px #22c55e;
 }
 .avatarWrapper img{
 width:100%;
@@ -300,11 +300,18 @@ function requestIdFor(a,b){
 return [a.toLowerCase(),b.toLowerCase()].sort().join("__");
 }
 
-async function getUserByEmail(email){
+function getUserByEmail(email){
+return new Promise((resolve)=>{
 const q=query(collection(db,"users"),where("email","==",email));
-const snap=await getDocs(q);
-if(!snap.empty) return snap.docs[0].data();
-return null;
+
+onSnapshot(q,(snap)=>{
+if(!snap.empty){
+resolve(snap.docs[0].data());
+}else{
+resolve(null);
+}
+});
+});
 }
 
 onAuthStateChanged(auth,async(user)=>{
