--- a/friends.html
+++ b/friends.html
@@ -114,9 +114,8 @@ gap:12px;
 position:relative;
 width:50px;
 height:50px;
-border-radius:50%;
-box-shadow:0 2px 6px rgba(0,0,0,.2);
 }
+
 .onlineDot{
 position:absolute;
 bottom:-2px;
@@ -129,8 +128,9 @@ border:3px solid white;
 box-shadow:0 0 6px #22c55e;
 }
 .avatarWrapper img{
-width:100%;
-height:100%;
+width:50px;
+height:50px;
+border-radius:50%;
 object-fit:cover;
 }
   .container{
